<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="action_cancel">Cancel</string>
    <string name="action_explore_books">Explore books</string>
    <string name="action_finished">I\'m finished!</string>
    <string name="action_submit_review">Submit review</string>
    <string name="action_update_progress">Update progress</string>

    <string name="app_name">ReadTracker</string>

    <string name="desc_book_cover">Book cover image</string>
    <string name="desc_decrement_progress">Decrement progress</string>
    <string name="desc_increment_progress">Increment progress</string>

    <string name="hint_opinion">What do you think? (Optional)</string>
    <string name="hint_pages_done">of %1$d pages</string>
    <string name="hint_percentage_done">% done</string>
    <string name="hint_zero">0</string>

    <string name="info_authors">by %1$s</string>
    <string name="info_empty_state">You are currently not reading any books.</string>
    <string name="info_pages">%1$d pages</string>

    <string name="progress_type_page">#</string>
    <string name="progress_type_percent">%</string>

    <string name="tooltip_page_progress">Update progress by page number</string>
    <string name="tooltip_percent_progress">Update progress by percentage</string>

    <string name="info_book_pages_progress">%1$d/%2$d pages</string>
    <string name="info_book_percent_progress">%1$d%%</string>
</resources>
